# miner

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  beamStratum.cpp  beamStratum.h  clHost.cpp  clHost.h  equihash_150_5.cl  equihash_150_5_3G.cl  hdsUtil.h  main.cpp  readme.md
clHost/: CMakeLists.txt  clHost.cpp  clHost.h
hds/core/: difficulty.cpp  difficulty.h  uintBig.cpp  uintBig.h
hds/utility/: common.cpp  common.h
solvers/: CMakeLists.txt  hdsHash_III_solver.cpp  hdsHash_II_solver.cpp  hdsSolvers.h
solvers/kernels/: hds_hash_II.cl  hds_hash_II.h  hds_hash_III.cl  hds_hash_III.h
stratum/: CMakeLists.txt  hdsStratum.cpp  hdsStratum.h
